--- a/apps/_compability_app/lang/en.json
+++ b/apps/_compability_app/lang/en.json
@@ -45,6 +45,12 @@
   "pages.auth.PasswordWasChanged": "The password was changed",
   "pages.auth.PasswordWasChangedDescription": "You can use you new password to sign in",
   "logout": "Logout",
+  "pages": {
+    "index": {
+      "title": "Welcome!",
+      "apply_test": "Apply first DISC test."
+    }
+  },
   "tests": {
     "disc": [
       {
