minor typo changes

--- a/apps/_compability_app/lang/en.json
+++ b/apps/_compability_app/lang/en.json
@@ -15,6 +15,8 @@
   "ServerError": "Server error",
   "StartRecovery": "Start recovery",
   "Started": "Started",
+  "Loading": "Loading...",
+  "PageUnavailable": "You are not authorized",
   "Change": "Change",
   "Changed": "Changed",
   "GoToLogin": "GoToLogin",
