--- a/apps/_compability_app/lang/ru.json
+++ b/apps/_compability_app/lang/ru.json
@@ -15,6 +15,8 @@
   "ServerError": "Ошибка сервера",
   "StartRecovery": "Восстановить",
   "Started": "Процесс запущен",
+  "Loading": "Загрузка...",
+  "PageUnavailable": "Страница доступна только авторизованному пользователю",
   "Change": "Изменить",
   "Changed": "Выполнено",
   "GoToLogin": "Перейти на страницу входа",
