--- a/apps/_compability_app/lang/ru.json
+++ b/apps/_compability_app/lang/ru.json
@@ -193,7 +193,7 @@
           "Гостиницу с идеальным соотношением цена/качество. Может быть, в старинном доме в ретро-стиле.."
         ]
       }
-    ],
-    "DataFetching": "Загружаем данные для теста..."
-  }
+    ]
+  },
+  "tests.DataFetching": "Загружаем данные для теста..."
 }
