--- a/apps/sberhack/lang/ru.json
+++ b/apps/sberhack/lang/ru.json
@@ -3,6 +3,7 @@
   "pages.library.index.PageTitle": "Библиотеки",
   "pages.marketplace.index.PageTitle": "Маркетплейс",
   "menu.Home": "Дашборд",
+  "menu.Function": "Создать функцию",
   "menu.Users": "Пользователи",
   "menu.Library": "Библиотеки",
   "menu.Market": "Маркетплейс"
