SBERDOMA-6 lang: translations

--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -33,9 +33,8 @@
   "pages.condo.buildings.PageTitle": "Объекты",
   "menu.Home": "Дашборд",
   "menu.Users": "Пользователи",
-  "menu.Buildings": "Объкты",
-  "menu.Tickets": "Заявки",
-  "menu.EVoting": "Е-Собрание",
+  "menu.Property": "Объкты",
+  "menu.Ticket": "Заявки",
   "menu.Employee": "Сотрудники",
   "menu.Residents": "Жители",
   "Welcome": "Привет, {name}!",
