SBERDOMA-112 Empty list view customization, fix empty list for tickets, add empty list to  property index

--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -7,8 +7,10 @@
   "pages.condo.e-voting.id.PageTitle": "Онлайн собрание",
   "pages.condo.e-voting.status.draft": "Черновик",
   "pages.condo.e-voting.status.published": "Опубликовано",
-  "pages.condo.property.index.PageTitle": "Объекты (здания, поселки)",
-  "pages.condo.property.index.CreatePropertyButtonLabel": "Создать",
+  "pages.condo.property.index.PageTitle": "Все дома",  
+  "pages.condo.property.index.EmptyList.header": "Список домов пока пуст",
+  "pages.condo.property.index.EmptyList.text": "Добавьте первый, это просто",
+  "pages.condo.property.index.CreatePropertyButtonLabel": "Добавить дом",
   "pages.condo.property.index.CreatePropertyModalTitle": "Создать",
   "pages.condo.property.index.EditPropertyModalTitle": "Редактировать",
   "pages.condo.property.id.PageTitle": "Объект",
@@ -60,7 +62,7 @@
   "menu.Analytics": "Аналитика",
   "menu.ControlRoom": "Диспетчерская",
   "menu.Users": "Пользователи",
-  "menu.Property": "Объекты",
+  "menu.Property": "Дома",
   "menu.Tickets": "Заявки",
   "menu.AllTickets": "Все заявки",
   "menu.Employee": "Сотрудники",
