--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -15,6 +15,9 @@
   "pages.condo.property.index.EditPropertyModalTitle": "Редактировать",
   "pages.condo.property.id.PageTitle": "Объект",
   "pages.condo.property.field.Address": "Адрес",
+  "pages.condo.property.index.TableField.Address": "Адрес",  
+  "pages.condo.property.index.TableField.FlatCount": "Квартир",
+  "pages.condo.property.index.TableField.TasksInWorkCount": "Заявок в работе",  
   "pages.condo.property.field.Name": "Название",
   "pages.condo.property.field.Type": "Тип объекта",
   "pages.condo.property.field.Organization": "Организация",
