SBERDOMA-113 Add property page

--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -11,6 +11,7 @@
   "pages.condo.property.index.CreatePropertyButtonLabel": "Create",
   "pages.condo.property.index.CreatePropertyModalTitle": "Create",
   "pages.condo.property.index.EditPropertyModalTitle": "Edit",
+  "pages.condo.property.index.CreatePropertyTitle": "Create",  
   "pages.condo.property.id.PageTitle": "Property",
   "pages.condo.property.field.Address": "Address",
   "pages.condo.property.field.Name": "Name",
@@ -71,6 +72,7 @@
   "menu.AllTickets": "All tickets",
   "menu.Employee": "Employee",
   "menu.Residents": "Residents",
+  "menu.AllProperties": "All houses",
   "Welcome": "Hello, {name}!",
   "pages.auth.RegistrationTitle": "Registration",
   "pages.auth.SignInTitle": "Sign in",
