--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -10,7 +10,14 @@
   "pages.condo.property.index.PageTitle": "Все дома",  
   "pages.condo.property.index.EmptyList.header": "Список домов пока пуст",
   "pages.condo.property.index.EmptyList.text": "Добавьте первый, это просто",
+  "pages.condo.property.index.CreatePropertyTitle": "Добавление дома",  
   "pages.condo.property.index.CreatePropertyButtonLabel": "Добавить дом",
+  "pages.condo.property.EmptyBuilderHeader": "Визуализируйте дом",
+  "pages.condo.property.EmptyBuilderDescription": "Введите всего несколько параметров и мы автоматически построим шахматку вашего дома",
+  "pages.condo.property.form.ResidentsTabTitle": "Жители",
+  "pages.condo.property.form.BuilderTabTitle": "Шахматка",
+  "pages.condo.property.form.EmptyResidents.header": "Список жителей пока пуст",
+  "pages.condo.property.form.EmptyResidents.text": "Создайте его, загрузив Excel-реестр жителей этого дома (пример файла)",
   "pages.condo.property.index.CreatePropertyModalTitle": "Создать",
   "pages.condo.property.index.ViewModeTable": "Список",
   "pages.condo.property.index.ViewModeMap": "На карте",
@@ -20,7 +27,8 @@
   "pages.condo.property.index.TableField.Address": "Адрес",  
   "pages.condo.property.index.TableField.UnitsCount": "Квартир",
   "pages.condo.property.index.TableField.TasksInWorkCount": "Заявок в работе",  
-  "pages.condo.property.field.Name": "Название",
+  "pages.condo.property.field.Name": "Название ",
+  "pages.condo.property.form.field.Name": "Название дома (если есть)",
   "pages.condo.property.field.Type": "Тип объекта",
   "pages.condo.property.field.Organization": "Организация",
   "pages.condo.property.type.building": "Многоквартирный дом",
@@ -70,6 +78,7 @@
   "menu.Property": "Дома",
   "menu.Tickets": "Заявки",
   "menu.AllTickets": "Все заявки",
+  "menu.AllProperties": "Все дома",  
   "menu.Employee": "Сотрудники",
   "menu.Residents": "Жители",
   "Welcome": "Привет, {name}!",
@@ -88,6 +97,7 @@
   "Email": "Email",
   "Phone": "Телефон",
   "Password": "Пароль",
+  "UploadFile": "Загрузить файл", 
   "From": "От",
   "Captcha": "Капча",
   "ConfirmPassword": "Пароль (проверка)",
