--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -23,6 +23,11 @@
   "pages.condo.property.index.ViewModeMap": "На карте",
   "pages.condo.property.index.EditPropertyModalTitle": "Редактировать",
   "pages.condo.property.id.PageTitle": "Объект",
+  "pages.condo.property.id.UnitsCount": "Помещений",
+  "pages.condo.property.id.Square": "Площадь",
+  "pages.condo.property.id.TicketsClosed": "Заявок выполнено",
+  "pages.condo.property.id.TicketsInWork": "Заявок в работе",
+  "pages.condo.property.id.UnknownMessage": "не известно",
   "pages.condo.property.field.Address": "Адрес",
   "pages.condo.property.index.TableField.Address": "Адрес",  
   "pages.condo.property.index.TableField.UnitsCount": "Квартир",
