--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -13,6 +13,11 @@
   "pages.condo.property.index.EditPropertyModalTitle": "Edit",
   "pages.condo.property.index.CreatePropertyTitle": "Create",  
   "pages.condo.property.id.PageTitle": "Property",
+  "pages.condo.property.id.UnitsCount": "Units",
+  "pages.condo.property.id.Square": "Square",
+  "pages.condo.property.id.TicketsClosed": "Tickets closed",
+  "pages.condo.property.id.TicketsInWork": "Tickets in work",
+  "pages.condo.property.id.UnknownMessage": "unknown",
   "pages.condo.property.field.Address": "Address",
   "pages.condo.property.field.Name": "Name",
   "pages.condo.property.field.Type": "Property type",
