--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -12,8 +12,15 @@
   "pages.condo.property.index.CreatePropertyModalTitle": "Create",
   "pages.condo.property.index.EditPropertyModalTitle": "Edit",
   "pages.condo.property.index.CreatePropertyTitle": "Create",  
+  "pages.condo.property.index.UpdatePropertyTitle": "Update",
   "pages.condo.property.id.PageTitle": "Property",
   "pages.condo.property.id.UnitsCount": "Units",
+  "pages.condo.property.EmptyBuilderHeader": "Describe the house",
+  "pages.condo.property.EmptyBuilderDescription": "Fill required inputs and we will visualize it",
+  "pages.condo.property.form.ResidentsTabTitle": "Residents",
+  "pages.condo.property.form.BuilderTabTitle": "Map",
+  "pages.condo.property.form.EmptyResidents.header": "Residents list is empty",
+  "pages.condo.property.form.EmptyResidents.text": "You can upload excel file to import residents (example)",
   "pages.condo.property.id.Square": "Square",
   "pages.condo.property.id.TicketsClosed": "Tickets closed",
   "pages.condo.property.id.TicketsInWork": "Tickets in work",
@@ -30,6 +37,7 @@
   "pages.condo.property.index.ViewModeMap": "On map",  
   "pages.condo.property.index.TableField.UnitsCount": "Flats",
   "pages.condo.property.index.TableField.TasksInWorkCount": "Tickets in work",  
+  "pages.condo.property.form.field.Name": "Property name",
   "pages.condo.ticket.index.PageTitle": "All tickets",
   "pages.condo.ticket.id.PageTitle": "Ticket",
   "pages.condo.ticket.id.Notes": "Notes",
@@ -94,6 +102,7 @@
   "Email": "Email",
   "Phone": "Phone",
   "Password": "Password",
+  "UploadFile": "Upload file",
   "From": "From",
   "Captcha": "Captcha",
   "ConfirmPassword": "Confirm password",
