--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -15,10 +15,10 @@
   "pages.condo.property.index.UpdatePropertyTitle": "Update",
   "pages.condo.property.id.PageTitle": "Property",
   "pages.condo.property.id.UnitsCount": "Units",
-  "pages.condo.property.EmptyBuilderHeader": "Describe the house",
-  "pages.condo.property.EmptyBuilderDescription": "Fill required inputs and we will visualize it",
+  "pages.condo.property.EmptyBuildingHeader": "Describe the house",
+  "pages.condo.property.EmptyBuildingDescription": "Fill required inputs and we will visualize it",
   "pages.condo.property.form.ResidentsTabTitle": "Residents",
-  "pages.condo.property.form.BuilderTabTitle": "Map",
+  "pages.condo.property.form.BuildingTabTitle": "Map",
   "pages.condo.property.form.EmptyResidents.header": "Residents list is empty",
   "pages.condo.property.form.EmptyResidents.text": "You can upload excel file to import residents (example)",
   "pages.condo.property.id.Square": "Square",
