--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -13,10 +13,10 @@
   "pages.condo.property.index.CreatePropertyTitle": "Добавление дома",  
   "pages.condo.property.index.UpdatePropertyTitle": "Редактирование дома",    
   "pages.condo.property.index.CreatePropertyButtonLabel": "Добавить дом",
-  "pages.condo.property.EmptyBuilderHeader": "Визуализируйте дом",
-  "pages.condo.property.EmptyBuilderDescription": "Введите всего несколько параметров и мы автоматически построим шахматку вашего дома",
+  "pages.condo.property.EmptyBuildingHeader": "Визуализируйте дом",
+  "pages.condo.property.EmptyBuildingDescription": "Введите всего несколько параметров и мы автоматически построим шахматку вашего дома",
   "pages.condo.property.form.ResidentsTabTitle": "Жители",
-  "pages.condo.property.form.BuilderTabTitle": "Шахматка",
+  "pages.condo.property.form.BuildingTabTitle": "Шахматка",
   "pages.condo.property.form.EmptyResidents.header": "Список жителей пока пуст",
   "pages.condo.property.form.EmptyResidents.text": "Создайте его, загрузив Excel-реестр жителей этого дома (пример файла)",
   "pages.condo.property.index.CreatePropertyModalTitle": "Создать",
