--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -204,7 +204,9 @@
   "pages.auth.reset.ReturnToLoginPage": "Вернуться на форму входа", 
   "pages.auth.reset.CreateNewPasswordMsg": "Придумайте новый пароль", 
   "pages.auth.reset.AndSignInMsg": "и войти в CRM", 
-  
+  "pages.auth.reset.RegisterHelp": "После ввода номера телефона вам автоматически придёт СМС-код. Это нужно для обеспечения безопасности CRM.", 
+  "pages.auth.register.field.SmsCode": "Код из СМС", 
+  "pages.auth.register.info.SmsCodeSent": "Мы отправили СМС-код на номер {phone}. Введите его в поле ниже.", 
   
   
   
@@ -212,6 +214,9 @@
   "pages.auth.register.field.Name": "ФИО", 
   "pages.auth.register.field.Email": "Эл. почта", 
   "pages.auth.register.field.Phone": "Телефон", 
+  "pages.auth.register.info.UserAgreement": "Нажимая на кнопку «Зарегистрироваться» вы принимаете {link}", 
+  "pages.auth.register.info.UserAgreementFileName": "условия политики конфиденциальности", 
+  "pages.auth.register.ChangePhoneNumber": "Изменить номер", 
   
   
   
