--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -181,7 +181,8 @@
   "VerificationCodeHasBeenSentToYourPhone": "Код подтверждения был отправлен на телефон",
   "WeAreStillDevelopingThisPage": "Мы еще **разрабатываем** эту страницу, она пока недоступна",
   "example.Name": "Иванов Сергей",
-  "example.Phone": "+7 (900) 800 22 22",  
+  "example.Phone": "+7 (900) 800 22 22", 
+  "example.Email": "name@example.org",   
   "pages.auth.AlreadyRegistered": "Я уже зарегистрирован", 
   "pages.auth.Register": "Зарегистрироваться",   
   "pages.auth.RegistrationTitle": "Регистрация",
@@ -196,7 +197,7 @@
   "pages.auth.reset.ResetSuccessMessage": "Отправили вам инструкцию на адрес {email}. Перейдите в вашу почту и следуйте инструкциям.", 
   "pages.auth.reset.RestorePasswordTitle": "Восстановить пароль", 
   "pages.auth.reset.CheckEmail": "Проверьте почту", 
-  "pages.auth.reset.ReturnToLoginPage": "Вернуться на форму входа", 
+    "pages.auth.reset.ReturnToLoginPage": "Вернуться на форму входа", 
   "pages.auth.reset.CreateNewPasswordMsg": "Придумайте новый пароль", 
   "pages.auth.reset.AndSignInMsg": "и войти в CRM", 
   "pages.auth.reset.RegisterHelp": "После ввода номера телефона вам автоматически придёт СМС-код. Это нужно для обеспечения безопасности CRM.", 
