SBERDOMA-128 Mobile version Errors from firebase Submit validation code fix

--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -135,6 +135,11 @@
   "pages.auth.register.info.UserAgreement": "By pressing the button - you will agree with our policy {link}",
   "pages.auth.register.info.UserAgreementFileName": "policy",
   "pages.auth.Registered": "Registered",
+  "auth.firebase.WrongValidationCode": "Validation code mismatch",
+  "auth.firebase.EmptyValidationCode": "Empty validation code",
+  "auth.firebase.EmptyPhoneNumber": "Empty phone",
+  "auth.firebase.InvalidPhoneNumber": "Not valid phone format",
+  "auth.firebase.TooManyRequests": "Too many requests",
   "pages.auth.RegistrationTitle": "Registration",
   "pages.auth.reset.AndSignInMsg": "and login to CRM",
   "pages.auth.reset.CheckEmail": "Check your mailbox",
