--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -102,7 +102,7 @@
   "auth.firebase.WrongValidationCode": "Validation code mismatch",
   "auth.firebase.EmptyValidationCode": "Empty validation code",
   "auth.firebase.EmptyPhoneNumber": "Empty phone",
-  "auth.firebase.InvalidPhoneNumber": "Not valid phone format",
+  "auth.firebase.InvalidPhoneNumber": "Phone number is invalid",
   "auth.firebase.TooManyRequests": "Too many requests",
   "pages.auth.AlreadyRegistered": "Already registered",
   "pages.auth.ChangePasswordTitle": "Change password",
