--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -211,6 +211,10 @@
   "pages.condo.property.type.building": "Building",
   "pages.condo.property.type.village": "Village",
   "pages.condo.property.unit.Name": "Name",
+  "pages.condo.warning.modal.Title": "Do not save property?",
+  "pages.condo.warning.modal.SaveLabel": "Save",
+  "pages.condo.warning.modal.LeaveLabel": "Leave",
+  "pages.condo.warning.modal.HelpMessage": "Unsaved information about this property will be lost if you leave this page. You can save the information or continue to edit  by closing this modal window.",
   "pages.condo.residents.PageTitle": "Residents",
   "pages.condo.ticket.field.Description": "Problem description",
   "pages.condo.ticket.field.Details": "Details",
