--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -276,6 +276,7 @@
   "Started": "Started",
   "StartRecovery": "Start recovery",
   "Status": "Status",
+  "Account": "Account",
   "ticket.EmptyList.header": "The list of applications is still empty",
   "ticket.EmptyList.title": "Create the first one, it's simple",
   "TicketPurpose": "Application assignment",
