--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -181,6 +181,7 @@
   "pages.condo.property.form.EmptyResidents.text": "You can upload excel file to import residents",
   "pages.condo.property.form.field.Name": "Property name",
   "pages.condo.property.form.ResidentsTabTitle": "Residents",
+  "pages.condo.property.form.DeleteLabel": "Delete property",
   "pages.condo.property.id.PageTitle": "Property",
   "pages.condo.property.id.Square": "Square",
   "pages.condo.property.id.TicketsClosed": "Tickets closed",
