--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -182,6 +182,8 @@
   "pages.condo.property.form.field.Name": "Название дома (если есть)",
   "pages.condo.property.form.ResidentsTabTitle": "Жители",
   "pages.condo.property.form.DeleteLabel": "Удалить дом",
+  "pages.condo.property.form.ConfirmDeleteTitle": "Удалить дом?",
+  "pages.condo.property.form.ConfirmDeleteMessage": "Восстановить будет невозможно",
   "pages.condo.property.id.PageTitle": "Объект",
   "pages.condo.property.id.Square": "Площадь",
   "pages.condo.property.id.TicketsClosed": "Заявок закрыто",
