SBERDOMA-299 add translates and types

--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -94,6 +94,9 @@
   "menu.Residents": "Residents",
   "menu.Tickets": "Tickets",
   "menu.Users": "Users",
+  "component.uploadlist.AttachedFilesLabel": "Files list",
+  "component.uploadlist.AddFileLabel": "Add file",
+  "component.uploadlist..error.FileTooBig": "File size is too big",
   "Name": "Name",
   "NoData": "No data",
   "NotImplementedYet": "We don't know how to do this yet, but we will definitely learn",
