--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -96,7 +96,7 @@
   "menu.Users": "Пользователи",
   "component.uploadlist.AttachedFilesLabel": "Прикреплённые файлы",
   "component.uploadlist.AddFileLabel": "Добавить файл",
-  "component.uploadlist..error.FileTooBig": "Файл слишком большой",
+  "component.uploadlist.error.FileTooBig": "Файл слишком большой",
   "Name": "Имя",
   "NoData": "Нет данных",
   "NotImplementedYet": "Пока что не умеем, но обязательно научимся",
