--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -223,6 +223,7 @@
   "pages.condo.warning.modal.LeaveLabel": "Не сохранять",
   "pages.condo.residents.PageTitle": "Жители",
   "pages.condo.ticket.field.Description": "Описание проблемы",
+  "pages.condo.ticket.field.Files": "Прикреплённые файлы",
   "pages.condo.ticket.field.Details": "Детали проблемы",
   "pages.condo.ticket.field.Number": "Номер",
   "pages.condo.ticket.field.Property": "Объект",
