--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -226,6 +226,7 @@
   "pages.condo.warning.modal.HelpMessage": "",
   "pages.condo.residents.PageTitle": "Residents",
   "pages.condo.ticket.field.Description": "Problem description",
+  "pages.condo.ticket.field.Files": "Files list",
   "pages.condo.ticket.field.Details": "Details",
   "pages.condo.ticket.field.Number": "Number",
   "pages.condo.ticket.field.Property": "Property",
