--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -223,6 +223,7 @@
   "pages.condo.property.warning.modal.Title": "Не сохранять дом?",
   "pages.condo.warning.modal.SaveLabel": "Сохранить",
   "pages.condo.warning.modal.LeaveLabel": "Не сохранять",
+  "pages.condo.warning.modal.HelpMessage": "",
   "pages.condo.residents.PageTitle": "Жители",
   "pages.condo.ticket.field.Description": "Описание проблемы",
   "pages.condo.ticket.field.Files": "Прикреплённые файлы",
