SBERDOMA-441 hierarhical select

--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -103,6 +103,9 @@
   "component.uploadlist.AddFileLabel": "Add file",
   "component.uploadlist.error.FileTooBig": "File size is too big",
   "component.uploadlist.error.UploadFailedErrorMessage": "Upload to server failed",
+  "component.ticketclassifier.PlacesLabel": "Location *",
+  "component.ticketclassifier.CategoriesLabel": "Category *",
+  "component.ticketclassifier.SubjectsLabel": "Subject *",
   "Name": "Name",
   "NoData": "No data",
   "NotImplementedYet": "We don't know how to do this yet, but we will definitely learn",
