--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -103,6 +103,9 @@
   "component.uploadlist.AddFileLabel": "Добавить файл",
   "component.uploadlist.error.FileTooBig": "Файл слишком большой",
   "component.uploadlist.error.UploadFailedErrorMessage": "Ошибка загрузки файла на сервер",
+  "component.ticketclassifier.PlacesLabel": "Где проблема *",
+  "component.ticketclassifier.CategoriesLabel": "Категория *",
+  "component.ticketclassifier.SubjectsLabel": "Суть проблемы *",
   "Name": "Имя",
   "NoData": "Нет данных",
   "NotImplementedYet": "Пока что не умеем, но обязательно научимся",
