SBERDOMA-508 basic UI for comments block
Floating position of comments panel with `Affix`
Comments list basic styles
Comments form basic styles

--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -234,8 +234,6 @@
   "pages.condo.property.type.village": "Коттеджный поселок",
   "pages.condo.property.unit.Name": "Название",
   "pages.condo.property.warning.modal.HelpMessage": "Информация о доме не сохранится, если вы уйдёте со страницы. Сохраните изменения или продолжите редактировать информацию о доме, закрыв это сообщение.",
-  "pages.condo.property.warning.modal.AddressValidationErrorMsg": "Вы не выбрали сооружение или тип выбранного сооружения не поддерживается",
-  "pages.condo.property.warning.modal.UnsupportedPropertyErrorMsg": "Тип собственности «{propertyType}» ещё не поддерживается",
   "pages.condo.property.warning.modal.Title": "Не сохранять дом?",
   "pages.condo.warning.modal.SaveLabel": "Сохранить",
   "pages.condo.warning.modal.LeaveLabel": "Не сохранять",
@@ -260,22 +258,20 @@
   "pages.condo.ticket.title.TicketChanges": "История изменений заявки",
   "pages.condo.ticket.title.TicketFromResident": "Заявка от жителя",
   "pages.condo.ticket.title.TicketNotFromResident": "Заявка не от жителя",
-  "pages.condo.ticket.TicketChanges.details.change": "изменил описание проблемы. Было «{from}», а стало «{to}»",
-  "pages.condo.ticket.TicketChanges.clientPhone.change": "изменил телефон клиента. Был {from}, а стал {to}",
-  "pages.condo.ticket.TicketChanges.clientName.change": "изменил клиента. Был {from}, а стал {to}",
-  "pages.condo.ticket.TicketChanges.isPaid.change": "изменил тип заявки. Стала {to}",
+  "pages.condo.ticket.TicketChanges.details": "изменил описание проблемы. Было «{from}», а стало «{to}»",
+  "pages.condo.ticket.TicketChanges.clientPhone": "изменил телефон клиента. Был {from}, а стал {to}",
+  "pages.condo.ticket.TicketChanges.clientName": "изменил клиента. Был {from}, а стал {to}",
+  "pages.condo.ticket.TicketChanges.isPaid": "изменил тип заявки. Стала {to}",
   "pages.condo.ticket.TicketChanges.isPaid.true": "платной",
   "pages.condo.ticket.TicketChanges.isPaid.false": "бесплатной",
-  "pages.condo.ticket.TicketChanges.isEmergency.change": "изменил тип заявки. {to}",
+  "pages.condo.ticket.TicketChanges.isEmergency": "изменил тип заявки. {to}",
   "pages.condo.ticket.TicketChanges.isEmergency.true": "Стала аварийной",
   "pages.condo.ticket.TicketChanges.isEmergency.false": "Больше не аварийная",
-  "pages.condo.ticket.TicketChanges.statusDisplayName.change": "перевёл задачу из статуса «{from}», в «{to}»",
-  "pages.condo.ticket.TicketChanges.propertyDisplayName.change": "изменил адрес заявки. Был {from}, а стал {to}",
-  "pages.condo.ticket.TicketChanges.unitName.change": "изменил номер квартиры. Был {from}, а стал {to}",
-  "pages.condo.ticket.TicketChanges.unitName.add": "добавил номер квартиры. Стал {to}",
-  "pages.condo.ticket.TicketChanges.unitName.remove": "удалил номер квартиры. Был {from}",
-  "pages.condo.ticket.TicketChanges.assignee.change": "изменил ответственного. Был «{from}», а стал «{to}»",
-  "pages.condo.ticket.TicketChanges.classifier.change": "изменил классификатор заявки. Было «{from}», а стало «{to}»",
+  "pages.condo.ticket.TicketChanges.statusDisplayName": "перевёл задачу из статуса «{from}», в «{to}»",
+  "pages.condo.ticket.TicketChanges.unitName": "изменил адрес заявки. Был {from}, а стал {to}",
+  "pages.condo.ticket.TicketChanges.unitName.change": "{address}, кв. {unitName}",
+  "pages.condo.ticket.TicketChanges.assignee": "изменил ответственного. Был «{from}», а стал «{to}»",
+  "pages.condo.ticket.TicketChanges.classifier": "изменил классификатор заявки. Было «{from}», а стало «{to}»",
   "pages.condo.ticket.TicketChanges.notice.DeletedCreatedAt.title": "Неизвестный пользователь",
   "pages.condo.ticket.TicketChanges.notice.DeletedCreatedAt.description": "Упс, кажется пользователь, который внёс эти изменения, был удалён из системы",
   "pages.condo.ticket.TicketChanges.fetchMore": "Показать ещё {count}",
@@ -370,5 +366,10 @@
   "contact.Contact.ContactsEditor.Phone": "Телефон",
   "contact.Contact.ContactsEditor.Name": "ФИО",
   "contact.Contact.ContactsEditor.AnotherContact": "Другой контакт",
-  "contact.Contact.ContactsEditor.CannotCreateContact": "Контактные данные будут сохранены в заявке, однако, контакт не будет создан, поскольку у текущего пользователя нет на это прав"
+  "contact.Contact.ContactsEditor.CannotCreateContact": "Контактные данные будут сохранены в заявке, однако, контакт не будет создан, поскольку у текущего пользователя нет на это прав",
+  "Comments.title": "Комментарии",
+  "Comments.prompt.title": "Добавляйте сюда комментарии",
+  "Comments.prompt.description": "Их не увидят жители. Они будут доступны только сотрудникам вашей организации.",
+  "Comments.list.description": "Жители не видят. Только для сотрудников вашей организации.",
+  "Comments.form.placeholder": "Ваш комментарий"
 }
