--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -371,5 +371,6 @@
   "Comments.prompt.title": "Добавляйте сюда комментарии",
   "Comments.prompt.description": "Их не увидят жители. Они будут доступны только сотрудникам вашей организации.",
   "Comments.list.description": "Жители не видят. Только для сотрудников вашей организации.",
-  "Comments.form.placeholder": "Ваш комментарий"
+  "Comments.form.placeholder": "Ваш комментарий",
+  "Comments.cannotCreateComments": "Вы не можете писать комментарии"
 }
