--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -366,6 +366,11 @@
   "ServerError": "Server error",
   "ServerErrorPleaseTryAgainLater": "There are problems on the server, try to visit the page after a while",
   "Share": "Share…",
+  "SendTicketToEmail": "Send ticket to email",
+  "ToEmployeesEmail": "…to employee's email",
+  "WhatsApp": "…in WhatsApp",
+  "Telegram": "…in Telegram",
+  "EmployeesName": "Employee's name",
   "Show": "Show",
   "Sign": "Sign",
   "SignIn": "Sign in",
@@ -382,6 +387,7 @@
   "TicketPurpose": "Application assignment",
   "ticketsTable.Number": "№",
   "ticketsTable.ResidentName": "Resident Name",
+  "ticket.shareMessage": "Hello! \nTicket #{number} dated {date} has been shared with you. \nThe text of the ticket: \"{details}\"",
   "Title": "Title",
   "profile.Update": "Editing my profile",
   "profile.ChangePasswordModalTitle": "change Password",
