--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -366,6 +366,11 @@
   "ServerError": "Ошибка сервера",
   "ServerErrorPleaseTryAgainLater": "На сервере возникли проблемы, попробуйте зайти на страницу через некоторое время",
   "Share": "Отправить…",
+  "SendTicketToEmail": "Отправить заявку на почту",
+  "ToEmployeesEmail": "…на почту сотруднику",
+  "WhatsApp": "…в WhatsApp",
+  "Telegram": "…в Telegram",
+  "EmployeesName": "ФИО сотрудника",
   "Show": "Показать",
   "Sign": "Подписать",
   "SignIn": "Войти",
@@ -382,6 +387,7 @@
   "TicketPurpose": "Назначение заявки",
   "ticketsTable.Number": "№",
   "ticketsTable.ResidentName": "Фио Жителя",
+  "ticket.shareMessage": "Добрый день! \nС вами поделились заявкой №{number} от {date}. \nТекст заявки: «{details}»",
   "Title": "Заголовок",
   "profile.Update": "Редактирование профиля",
   "profile.ChangePasswordModalTitle": "Изменение пароля",
