--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -347,6 +347,8 @@
   "Phone": "Phone",
   "placeholder.Address": "Street, house",
   "placeholder.Description": "Describe the problem in as much detail as possible",
+  "trial.title": "Free period of 14 days",
+  "trial.subTitle": "And then...",
   "Print": "Print",
   "Problem": "Problem",
   "property.Break": "Break",
