--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -347,6 +347,8 @@
   "Phone": "Телефон",
   "placeholder.Address": "Улица, дом",
   "placeholder.Description": "Опишите суть проблемы как можно подробнее",
+  "trial.title": "Бесплатный период 14 дней",
+  "trial.subTitle": "А после...",
   "Print": "Распечатать",
   "Problem": "Проблема",
   "property.Break": "Прервать",
