--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -349,6 +349,7 @@
   "placeholder.Description": "Describe the problem in as much detail as possible",
   "trial.title": "Free period of 14 days",
   "trial.subTitle": "And then...",
+  "trial.startPeriod": "Start trial period",
   "Print": "Print",
   "Problem": "Problem",
   "property.Break": "Break",
