--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -349,6 +349,7 @@
   "placeholder.Description": "Опишите суть проблемы как можно подробнее",
   "trial.title": "Бесплатный период 14 дней",
   "trial.subTitle": "А после...",
+  "trial.startPeriod": "Начать пробный период",
   "Print": "Распечатать",
   "Problem": "Проблема",
   "property.Break": "Прервать",
