SBERDOMA-192 remove classifier from Ticket

--- a/apps/condo/lang/en.json
+++ b/apps/condo/lang/en.json
@@ -77,6 +77,8 @@
   "field.Unit.requiredError": "Select unit",
   "field.email.requiredError": "Enter email",
   "field.FullName.requiredError": "Enter contact name",
+  "field.LocationClassifier.requiredError": "Choose task location",
+  "field.CategoryClassifier.requiredError": "Choose task category",
   "field.Responsible": "Responsible",
   "field.Responsible.description": "Responsible - controls the work of the Contractor",
   "field.Source": "Source",
@@ -117,6 +119,9 @@
   "component.statscard.periodtypes.Quarter": "quarter",
   "component.statscard.ExtraTitle": "More details",
   "component.ticketswidget.Title": "Tickets for the",
+  "component.ticketclassifier.SubjectsLabel": "What heppened",
+  "component.ticketclassifier.CategoriesLabel": "Category",
+  "component.ticketclassifier.LocationsLabel": "Location",
   "Name": "Name",
   "NoData": "No data",
   "NotImplementedYet": "We don't know how to do this yet, but we will definitely learn",
