--- a/apps/condo/lang/ru.json
+++ b/apps/condo/lang/ru.json
@@ -77,6 +77,8 @@
   "field.Property.requiredError": "Укажите адрес",
   "field.email.requiredError": "Укажите email",
   "field.FullName.requiredError": "Укажите имя жителя",
+  "field.LocationClassifier.requiredError": "Заполните место инцедента",
+  "field.CategoryClassifier.requiredError": "Заполните тип работ",
   "field.Responsible": "Ответственный",
   "field.Responsible.description": "Ответственный — контролирует работу Исполнителя",
   "field.Source": "Источник",
@@ -117,6 +119,9 @@
   "component.statscard.periodtypes.Quarter": "квартал",
   "component.statscard.ExtraTitle": "Подробнее",
   "component.ticketswidget.Title": "Заявки за",
+  "component.ticketclassifier.SubjectsLabel": "В чём проблема (не обязательно)",
+  "component.ticketclassifier.CategoriesLabel": "Тип работ",
+  "component.ticketclassifier.LocationsLabel": "Место инцидента",
   "Name": "Имя",
   "NoData": "Нет данных",
   "NotImplementedYet": "Пока что не умеем, но обязательно научимся",
