chore(condo): DOMA-9716 removed temporary file
feat(condo): DOMA-9716 renamed error

feat(condo): DOMA-9716 remove meta from mutation

fix(condo): DOMA-9716 fixed after review

chore(condo): DOMA-9716 added todo

feat(condo): DOMA-9716 updated schema

feat(condo): DOMA-9716 added restriction on token types during user registration

chore(condo): DOMA-9716 added TODOs

feat(condo): DOMA-9716 added missing file

test(condo): DOMA-9716 refactored tests

feat(condo): DOMA-9716 remove authenticateOrRegisterUserWithConfirmToken mutation

feat(condo): DOMA-9716 added authenticateOrRegisterUserWithToken mutation

feat(condo): DOMA-9716 try logic

test(condo): DOMA-9716 added test

refactor(condo): DOMA-9716 refactored after review

refactor(condo): DOMA-9716 refactored errors

refactor(condo): DOMA-9716 changed mutation name

refactor(condo): DOMA-9716 refactored after review. Added checking of deleted confirm action tokens

refactor(condo): DOMA-9716 refactored checkRequiredUserFields

feat(condo): DOMA-9716 updated after rebase

refactor(condo): DOMA-9716 some refactoring

chore(condo): DOMA-9716 updated docs

test(condo): DOMA-9716 updated tests

feat(condo): DOMA-9716 updated error when required fields are missing

feat(condo): DOMA-9716 added guard by ip. Fixed gql-types

test(condo): DOMA-9716 fixed tests

chore(condo): DOMA-9716 removed logs

feat(condo): DOMA-9716 added signInUser mutation

test(condo): DOMA-9716 added tests for mutation signInUser

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -479,6 +479,14 @@
   "api.user.TOTAL_REQUEST_LIMIT_FOR_USER_REACHED": "You are sending too many requests. Try again later",
   "api.user.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "Unable to verify your phone number. Try again or ask our support",
   "api.user.WRONG_PASSWORD_FORMAT": "Password must be in string format",
+  "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_EMAILS": "You cannot specify different emails",
+  "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_PHONES": "You cannot specify different phones",
+  "api.user.authenticateOrRegisterUserWithToken.INVALID_TOKEN": "Invalid token",
+  "api.user.authenticateOrRegisterUserWithToken.REQUIRED_USER_DATA_IS_MISSING": "Please fill in the required fields",
+  "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_EMAIL": "To be able to log in with your phone number, you must log in to your account using a verified email",
+  "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_PHONE": "To be able to log in with your email, you must log in to your account using a verified phone number",
+  "api.user.authenticateOrRegisterUserWithToken.UNSUPPORTED_TOKEN": "Invalid token",
+  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "Operation failed",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Wrong phone or password",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "Unable to find non-expired ConfirmPhoneAction by specified token",
   "api.user.changePasswordWithToken.USER_NOT_FOUND": "Unable to find user with specified phone",
